k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hrm-web
  namespace: hrm-test
  labels:
    app: hrm-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hrm-web
  template:
    metadata:
      labels:
        app: hrm-web
    spec:
      containers:
        - name: hrm-web
          image: 897931590595.dkr.ecr.eu-central-1.amazonaws.com/hrm-web:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          readinessProbe:
            tcpSocket:
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: hrm-service
  namespace: hrm-test
spec:
  type: LoadBalancer
  selector:
    app: hrm-web
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
